--- a/js/First_steps/Silly_story_generator/index.html
+++ b/js/First_steps/Silly_story_generator/index.html
@@ -11,20 +11,29 @@
 </head>
 
 <body>
-	<div>
-		<label for="customname">Enter custom name:</label>
-		<input id="customname" type="text" placeholder="">
+	<div class="silly-story-generator">
+		<h1>Silly story generator</h1>
+		<div>
+			<label for="customname">Enter custom name:</label>
+			<input id="customname" type="text" placeholder="">
+		</div>
+		<div>
+			<span>Select country: </span>
+			<label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
+			<label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
+		</div>
+		<div>
+			<button class="randomize">Generate random story</button>
+		</div>
+		<!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
+		<p class="story">
+			It was 94 fahrenheit outside, so :insertx: went for a walk.
+			When they got to :inserty:, they stared in horror for a few moments,
+			then :insertz:. Bob saw the whole thing, but was not surprised — :insertx: weighs 300 pounds,
+			and it was a hot day.
+		</p>
+		<script src="script.js"></script>
 	</div>
-	<div>
-		<label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-		<label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
-	</div>
-	<div>
-		<button class="randomize">Generate random story</button>
-	</div>
-	<!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
-	<p class="story"></p>
-	<script src="script.js"></script>
 </body>
 
 </html>
