finished Image gallery

--- a/js/Building_blocks/image_gallery/index.html
+++ b/js/Building_blocks/image_gallery/index.html
@@ -1,4 +1,8 @@
-<!-- Reference: https://developer.mozilla.org/ja/docs/Learn/JavaScript/Building_blocks/Image_gallery -->
+<!-- References:
+	https://developer.mozilla.org/ja/docs/Learn/JavaScript/Building_blocks/Image_gallery
+	https://mdn.github.io/learning-area/javascript/building-blocks/gallery/
+-->
+
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -14,8 +18,8 @@
 	<h1>Image gallery example</h1>
 	<div class="full-img">
 		<img class="displayed-img" src="images/pic1.jpg" alt="Closeup of a human eye">
-		<div class="overlay"></div>
-		<button class="dark">Darken</button>
+		<div class="overlay dark"></div>
+		<button>Darken</button>
 	</div>
 	<div class="thumb-bar"></div>
 	<script src="main.js"></script>
