--- a/js/Objects/Adding_bouncing_balls_features/index.html
+++ b/js/Objects/Adding_bouncing_balls_features/index.html
@@ -13,7 +13,8 @@
 	<h1>Bouncing balls</h1>
 	<canvas id="bouncing_balls"></canvas>
 
-	<script src="script.js"></script>
+	<script src="script-prototype.js"></script>
+	<!-- <script src="script-class.js"></script> -->
 </body>
 
 </html>
