Finish: adding bouncing balls features

--- a/js/Objects/Adding_bouncing_balls_features/index.html
+++ b/js/Objects/Adding_bouncing_balls_features/index.html
@@ -11,6 +11,7 @@
 
 <body>
 	<h1>Bouncing balls</h1>
+	<p>ball count: </p>
 	<canvas id="bouncing_balls"></canvas>
 
 	<script src="script-prototype.js"></script>
