Add: adding bouncing balls features script

--- a/js/Objects/Adding_bouncing_balls_features/index.html
+++ b/js/Objects/Adding_bouncing_balls_features/index.html
@@ -14,8 +14,8 @@
 	<p>ball count: </p>
 	<canvas id="bouncing_balls"></canvas>
 
-	<script src="script-prototype.js"></script>
-	<!-- <script src="script-class.js"></script> -->
+	<!-- <script src="script-prototype.js"></script> -->
+	<script src="script-class.js"></script>
 </body>
 
 </html>
